--- a/package.json
+++ b/package.json
@@ -8,11 +8,21 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/vue-fontawesome": "^0.1.10",
+    "@saeris/vue-spinners": "^1.0.8",
     "core-js": "^3.6.5",
+    "popper.js": "^1.16.1",
+    "tailwindcss": "^1.1.2",
     "vue": "^2.6.11",
+    "vue-infinite-scroll": "^2.0.2",
+    "vue-js-modal": "^2.0.0-rc.6",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@ianaya89/vue-cli-plugin-tailwind": "~1.1.0",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-router": "~4.4.0",
